refactor: remove redundant singular transport ID handling and simplify stream collectors to .toList()